# Pontia_classes

./: .gitignore  README.md
Clase 1/: Laboratorio 1.md  Laboratorio 2.md  Laboratorio 3.md
Clase 2/: Laboratorio 1.md  Laboratorio 2.md
Clase 3/: Laboratorio 1.md  Laboratorio 2.md
Clase 4/: Laboratorio 1.md  Laboratorio 2.md
Clase 4/Laboratorio 2/: app.js  index.html  styles.css
Clase 5/: Laboratorio 1.md  Laboratorio 2.md
Clase 5/Laboratorio 1/: 00-Infrastructure-APIGateway.yaml  01-Frontend.yaml  (+1 more)
Clase 6/: Laboratorio 1.md
Clase 6/vector-db-live-classes-code/: docker-compose.yaml  pyproject.toml
Clase 6/vector-db-live-classes-code/data/: summaries.json
Clase 6/vector-db-live-classes-code/qdrant_config/: config.yaml
Clase 6/vector-db-live-classes-code/scripts/: create_langchain_index.py  create_llamaindex_index.py  create_qdrant_index.py  preprocessing.py  routing_generation.py
Clase 6/vector-db-live-classes-code/src/: app.py  main.py
Clase 6/vector-db-live-classes-code/src/api/: router_clients.py  router_langchain.py  router_llamaindex.py  schema.py
Clase 6/vector-db-live-classes-code/src/processes/: __init__.py
Clase 6/vector-db-live-classes-code/src/processes/client_process/: process.py
Clase 6/vector-db-live-classes-code/src/processes/langchain_chain/: chain.py  prompts.py  structures.py
Clase 6/vector-db-live-classes-code/src/processes/llamaindex_query_engine/: query_engine.py
Clase 6/vector-db-live-classes-code/src/services/: embeddings.py  llms.py  vector_store.py
Clase 7/: Laboratorio 1.md
Clase 8/: Laboratorio 1.md
(+57 files in other folders)
